Enhance .gitignore to exclude LaTeX auxiliary files and add new images for experiment configuration and logged charts. Remove generated files from previous homework submission, including .aux, .log, .out, .pdf, and .fls files. Update HW1.tex with new code snippets and analysis for dataset handling and learning rate impact. Add sweep configuration in sweep.yaml for hyperparameter tuning.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ wheels/
 data/
 wandb/
 checkpoints/
+.texmf*/
+
+#latex
+**/*.log
+**/*.aux
+**/*.out
+**/*.pdf
+**/*.fls
+**/*.fdb_latexmk
+**/*.fdb_latexmk
