Add gradient norm analysis and logging to HW1.tex; update sweep.yaml for learning rate scheduler; include new images for gradient norms and scheduler.

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -4,5 +4,6 @@ metric:
   name: val/loss
   goal: minimize
 parameters:
-  lr:
-    values: [1e-3, 1e-1]
+  use_scheduler:
+    values: [True, False]
+
