Refactor dataset loading and training configuration in HW1.tex and train.py; update sweep.yaml to adjust learning rate parameters; add new images for batch size and pretrained model analysis.

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -4,6 +4,6 @@ metric:
   name: val/loss
   goal: minimize
 parameters:
-  use_scheduler:
-    values: [True, False]
+  lr:
+    values: [1e-2, 1e-4, 1e-5]
 
