Implement dataset overlap detection and model architecture validation in model_testing.py; add learning rate range testing with visualization; update dependencies in pyproject.toml and uv.lock for new libraries; include output image for learning rate analysis.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,11 @@ dependencies = [
     "scikit-learn",
     "tqdm",
     "lightning",
+    "ipykernel",
+    "pip",
+    "seaborn",
+    "jupyter",
+    "hdf5storage",
+    "torch-lr-finder",
+    "pyarrow"
 ]
